--- a/css/grid.css
+++ b/css/grid.css
@@ -79,7 +79,23 @@
   margin-left: 66.6667%;
 }
 
-.unit-xs-1-2,.unit-xs-1-3,.unit-xs-2-3 {
+.unit-xs-1-4 {
+  width: 25.0000%;
+}
+
+.unit-offset-xs-1-4 {
+  margin-left: 25.0000%;
+}
+
+.unit-xs-3-4 {
+  width: 75.0000%;
+}
+
+.unit-offset-xs-3-4 {
+  margin-left: 75.0000%;
+}
+
+.unit-xs-1-2,.unit-xs-1-3,.unit-xs-2-3,.unit-xs-1-4,.unit-xs-3-4 {
   display: inline-block;
   visibility: visible;
 }
@@ -125,7 +141,23 @@
   margin-left: 66.6667%;
 }
 
-.unit-s-1-2,.unit-s-1-3,.unit-s-2-3 {
+.unit-s-1-4 {
+  width: 25.0000%;
+}
+
+.unit-offset-s-1-4 {
+  margin-left: 25.0000%;
+}
+
+.unit-s-3-4 {
+  width: 75.0000%;
+}
+
+.unit-offset-s-3-4 {
+  margin-left: 75.0000%;
+}
+
+.unit-s-1-2,.unit-s-1-3,.unit-s-2-3,.unit-s-1-4,.unit-s-3-4 {
   display: inline-block;
   visibility: visible;
 }
@@ -173,7 +205,23 @@
   margin-left: 66.6667%;
 }
 
-.unit-m-1-2,.unit-m-1-3,.unit-m-2-3 {
+.unit-m-1-4 {
+  width: 25.0000%;
+}
+
+.unit-offset-m-1-4 {
+  margin-left: 25.0000%;
+}
+
+.unit-m-3-4 {
+  width: 75.0000%;
+}
+
+.unit-offset-m-3-4 {
+  margin-left: 75.0000%;
+}
+
+.unit-m-1-2,.unit-m-1-3,.unit-m-2-3,.unit-m-1-4,.unit-m-3-4 {
   display: inline-block;
   visibility: visible;
 }
