--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,9 @@ body {
         padding-right: 1.5rem;
     }
       
+span {
+    display: none;
+}
 
 @media only screen and (min-width: 25em) {
 
@@ -101,6 +104,10 @@ body {
   .copyright {
     text-align: center;
   }
+    
+    span {
+        display: inline;
+    }
     
 }
 
