--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,30 @@ body {
   padding: 0;
 }
 
+a:focus {
+    outline: 3px solid #000;
+}
+
+.skip-links {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.skip-links a {
+    position: absolute;
+    top: -3em;
+    background-color: black;
+    color: white;
+    padding: 0.5em 0.75em;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.skip-links a:focus {
+    top: 0;
+}
+
 .img-flex {
   display: block;
   width: 100%;
